<resources>
    <string name="app_name">Jinkawa-Android</string>
    <string name="title_activity_event_list">Test</string>
    <string name="action_settings">Settings</string>
    <string name="action_view_participants">参加者リストを見る</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_v">v</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_e">eActivity</string>
    <string name="title_activity_event_detail">EventDetailActivity</string>
    <string name="action_edit">編集</string>
    <string name="action_delete">削除</string>
    <string name="action_list_participants">参加者リスト</string>
    <string name="action_save_csv">CSV保存</string>

    <!-- Strings related to tab icon's text -->
    <string name="tab_icon_event">イベント</string>
    <string name="tab_icon_announcement">お知らせ</string>
    <string name="tab_icon_setting">オプション</string>
    <string name="title_activity_login">ログイン</string>

    <!-- Strings related to page title's text -->
    <string name="title_event_create">イベント作成</string>
    <string name="title_event_edit">イベント編集</string>
    <string name="title_notice_create">お知らせ作成</string>
    <string name="title_notice_edit">お知らせ編集</string>
    <string name="title_event_entry">参加申し込み</string>
    <string name="title_pass_change">パスワードの変更</string>

    <!-- Strings related to edit's text -->
    <string name="event_edit_button_text">イベントの編集を完了する</string>
    <string name="notice_edit_button_text">お知らせの編集を完了する</string>

    <!-- Strings related to list's text -->
    <string name="list_text_update">最終更新日:</string>

    <string name="login_error_id">IDは3文字以上10文字以内で入力して下さい</string>
    <string name="login_error_password">パスワードは5文字以上10文字以内で入力して下さい</string>
    <string name="login_error">ログインできませんでした。IDとパスワードを確認して下さい。</string>

    <!-- Strings related to form's text -->
    <string name="form_department_text">担当部名</string>
    <string name="form_event_title_text">イベント名</string>
    <string name="form_event_image_text">イベント画像</string>
    <string name="form_notice_title_text">タイトル名</string>
    <string name="form_notice_type_text">種類</string>
    <string name="form_location_text">開催地</string>
    <string name="form_capacity_text">定員</string>
    <string name="form_date_start_text">開始日</string>
    <string name="form_date_end_text">終了日</string>
    <string name="form_deadline_text">申込締切日</string>
    <string name="form_description_text">説明文</string>
    <string name="form_officer_description_text">公開設定</string>
    <string name="form_officer_text">役員にのみ公開する</string>
    <string name="form_officer_false_text">全員に公開する</string>
    <string name="form_event_create_text">イベントを作成する</string>

    <!-- Strings related to password's text -->
    <string name="password_id_title">ID</string>
    <string name="password_old_pass_title">現在のパスワード</string>
    <string name="password_new_pass_title">新しいパスワード</string>
    <string name="password_conf_pass_title">パスワードの確認</string>
    <string name="password_button_text">パスワードを変更する</string>

    <!-- Strings related to hint's text -->
    <string name="hint_event_name">10文字以内で入力してください。</string>
    <string name="hint_location">30文字以内で入力してください。</string>
    <string name="hint_capacity">5桁以内で入力してください。</string>
    <string name="hint_description">250文字以内で入力してください。</string>
    <string name="hint_pass_old">現在のパスワードを入力</string>
    <string name="hint_pass_new">新しいパスワードを入力</string>
    <string name="hint_pass_conf">新しいパスワードを再入力</string>


    <!-- Strings related to option -->
    <string name="option_setting_title">設定</string>
    <string name="option_setting_form_text">フォーム履歴の確認</string>
    <string name="option_setting_notification_text">プッシュ通知の受信</string>
    <string name="option_account_title">アカウント</string>
    <string name="option_account_pass_text">パスワードの変更</string>
    <string name="option_account_logout_text">ログアウト</string>
    <string name="option_setting_contact">問い合わせ</string>
    <string name="option_setting_contact_jinkawa">陣川あさひ町会</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Departments' name -->
    <string name="yakuin">役員</string>
    <string name="soumu">総務部</string>
    <string name="seishounen">青少年育成部</string>
    <string name="josei">女性部</string>
    <string name="hukushi">福祉部</string>
    <string name="kankyou">環境部</string>
    <string name="boukabouhan">防火防犯部</string>
    <string name="koutsu">交通部</string>
    <string name="jbus">Jバス部</string>

    <!-- Notice type's name -->
    <string name="info">告知</string>
    <string name="attention">注意</string>
    <string name="bus">バス</string>
    <string name="shopping">買い物</string>
    <string name="emergency">緊急</string>

    <!-- Event entry item's name -->
    <string name="entry_item_name">氏名</string>
    <string name="entry_item_address">住所</string>
    <string name="entry_item_tell">電話番号</string>
    <string name="entry_item_gender">性別</string>
    <string name="entry_item_age">年齢</string>

    <!-- Alert Dialog's base text -->
    <string name="yes">はい</string>
    <string name="no">いいえ</string>
    <string name="_return">もどる</string>
    <string name="confirm">確認</string>
    <string name="create_text">作成する</string>
    <string name="delete_text">削除する</string>
    <string name="error_text">エラー</string>
    <!-- Alert Dialog's specific text -->
    <string name="delete_message">本当に削除してもよろしいですか？</string>
    <string name="delete_entry_log">入力履歴を削除しました</string>
    <string name="nothing_entry_log">入力履歴がありません</string>
    <string name="create_confirm">この内容でよろしいですか？</string>
    <string name="contact_address">住所：北海道函館市陣川町79-55</string>
    <string name="contact_tell">電話番号：0138-31-8855</string>
    <string name="contact_facebook">facebook：</string>
    <string name="contact_facebook_url">https://ja-jp.facebook.com/jinnkawaasahi/</string>
    <string name="pass_change_error_1">入力したパスワードが間違っています。</string>
    <string name="pass_change_error_2">新しいパスワードが入力されいてません。</string>
    <string name="pass_change_error_3">新しいパスワードと確認用パスワードが一致しません。</string>
    <string name="logout_confirm_text">本当にログアウトしてよろしいですか？</string>


    <!-- template <string name=""></string> -->
</resources>
