<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_pass_change"
        style="@style/BaseToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/jipriMainColor"
        android:minHeight="?attr/actionBarSize"
        android:popupTheme="@style/PopupOverlay" />

    <RelativeLayout
        android:id="@+id/pass_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="64dp"
        android:layout_below="@+id/toolbar_pass_change">
        <TextView
            android:id="@+id/pass_id_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/password_id_title" />

        <TextView
            android:id="@+id/pass_id_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/pass_id_title"
            android:layout_centerHorizontal="true"
            android:textSize="22sp"
            android:textColor="@color/black"
            tools:text="testtestid111" />

        <TextView
        android:id="@+id/pass_oldpass_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass_id_title"
        android:layout_marginTop="36dp"
        android:textSize="16sp"
        android:text="@string/password_old_pass_title" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInput_oldpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pass_oldpass_title"
            app:hintTextAppearance="@style/AppTheme.Design.TextAppearance.Design.Hint"
            app:theme="@style/AppTheme.Design.TextInputLayout">

            <EditText
                android:id="@+id/edit_oldpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_pass_old"
                android:inputType="textPassword"
                tools:text="test01"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/pass_newpass_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInput_oldpass"
            android:layout_marginTop="28dp"
            android:textSize="16sp"
            android:text="@string/password_new_pass_title" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInput_newpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pass_newpass_title"
            app:hintTextAppearance="@style/AppTheme.Design.TextAppearance.Design.Hint"
            app:theme="@style/AppTheme.Design.TextInputLayout">

            <EditText
                android:id="@+id/edit_newpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_pass_new"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/pass_confpass_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInput_newpass"
            android:layout_marginTop="28dp"
            android:textSize="16sp"
            android:text="@string/password_conf_pass_title" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInput_confpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pass_confpass_title"
            app:hintTextAppearance="@style/AppTheme.Design.TextAppearance.Design.Hint"
            app:theme="@style/AppTheme.Design.TextInputLayout">

            <EditText
                android:id="@+id/edit_confpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_pass_conf"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/button_pass_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass_layout"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:text="@string/password_button_text"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="#616161"/>

</RelativeLayout>