<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.taross.jinkawa_android.NoticeCreateActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_notice_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/BaseToolbar"
        android:background="@color/jipriMainColor"
        android:minHeight="?attr/actionBarSize"
        android:titleTextColor="@color/white"
        android:popupTheme="@style/PopupOverlay"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/toolbar_notice_create">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_department"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/form_department_text"
                android:textColor="#222222" />

            <Spinner
                android:id="@+id/spinner_department"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <TextView
                android:id="@+id/title_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/form_notice_type_text"
                android:textColor="#222222" />

            <Spinner
                android:id="@+id/spinner_type"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <TextView
                android:id="@+id/title_notice_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:text="@string/form_notice_title_text"
                android:textColor="#222222" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_notice_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/AppTheme.Design.TextAppearance.Design.Hint"
                app:theme="@style/AppTheme.Design.TextInputLayout">

                <EditText
                    android:id="@+id/edit_notice_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_event_name"
                    android:maxLength="10"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/title_notice_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/form_description_text"
                android:textColor="#222222" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput_notice_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/AppTheme.Design.TextAppearance.Design.Hint"
                app:theme="@style/AppTheme.Design.TextInputLayout">

                <EditText
                    android:id="@+id/edit_notice_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_description"
                    android:maxLength="250"
                    android:inputType="textMultiLine" />

            </android.support.design.widget.TextInputLayout>

            <Switch
                android:id="@+id/switch_officeronly"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/officer_only_button"
                android:padding="16dp"
                android:text="@string/form_officer_text" />

            <Button
                android:id="@+id/button_notice_create"
                android:layout_width="300dp"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="30dp"
                android:layout_weight="1"
                android:text="お知らせを作成する" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
